# patchamama

./: .clang-format  .ocamlformat  LICENSE  dune-project  patchamama.opam  watch.sh
dylib/: dynlib.c  main  main.c
dyltest/: dune  dyl_ext.c  dyl_loader.ml  dyl_loader.mli  dyl_loader_stubs.c  dyl_loader_stubs.h
dyltest/test/: dune  dyl_test.ml
js/: dune  js.ml  js.mli  js_stubs.c  js_stubs.h
js/config/: discover.ml
js/test/: dune  js_test.ml
js/test/snapshots/: 00_fold.yml
lstd/: dune  l_stubs.h  l_stubs_time.c  lstd.ml  lstd.mli
midi/: dune  midi.ml  midi.mli  midi_stubs.c  midi_stubs.cxx  midi_stubs.h  midiin_stubs.cxx  midiout_stubs.cxx
midi/config/: discover.ml
midi/test/: dune  midi_test.ml
midi/test/scripts/: function_calls.js
reaper/: dune  reaper.ml  reaper_stubs.cxx  reaper_stubs.h  register.cxx
reaper/test/: dune  reaper_test.ml
stest/: dune  stest.ml  stest.mli
