(library
 (name midi)
 (public_name patchamama.midi)
 (synopsis "Bindings and types for raw midi handling")
 (foreign_stubs
  (language c)
  (names midi_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp))
 ; (install_c_headers lua_stubs)
 ; (libraries ffmpeg-avutil ffmpeg-avcodec)
 )

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
