(library
 (name midi)
 (public_name patchamama.midi)
 (synopsis "Bindings and types for raw midi handling")
 (foreign_stubs
  (language cxx)
  (names midiin_stubs midiout_stubs)
  (flags
   -std=c++11
   (:include c_flags.sexp)))
 (c_library_flags
  -lc++
  (:include c_library_flags.sexp))
 ; (install_c_headers lua_stubs)
 ; (libraries ffmpeg-avutil ffmpeg-avcodec)
 )

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
